tests/constructor_type/constructor_type.exp
Error ----------------------------------------------------------------------------------------- constructor_type.js:11:8

Cannot call `c2` with `"bad"` bound to `x` because string [1] is incompatible with number [2]. [incompatible-type]

   constructor_type.js:11:8
   11| new c2("bad"); // ERROR: string incompatible with number
              ^^^^^ [1]

References:
   constructor_type.js:8:29
    8| type CtorWithArgs = new (x: number) => {v: string};
                                   ^^^^^^ [2]


Error ----------------------------------------------------------------------------------------- constructor_type.js:23:5

Cannot use `new` on `NotConstructable` [1]. Only classes and interfaces with a construct signature can be constructed.
[invalid-constructor]

   constructor_type.js:23:5
   23| new nc(); // ERROR: invalid-constructor
           ^^

References:
   constructor_type.js:22:19
   22| declare const nc: NotConstructable;
                         ^^^^^^^^^^^^^^^^ [1]



Found 2 errors
